@@ -1,3 +1,8 @@
+2001-04-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* struct.c (scm_free_structs):  Only pairs may be accessed with
+	SCM_C[AD]R.
+
 2001-04-19  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>
 
 	* unif.h (SCM_ARRAY_CONTIGUOUS): Reintroduced as deprecated.
